@@ -1,8 +1,11 @@
 package com.dgu.review.domain.interview.service;
 
 import com.dgu.review.domain.interview.dto.response.GetInterviewResultsResponse;
+import com.dgu.review.domain.interview.dto.response.InterviewSummary;
+import com.dgu.review.domain.interview.dto.response.ProgressStatus;
 import com.dgu.review.domain.interview.dto.response.QuestionSummary;
 import com.dgu.review.domain.interview.entity.InterviewSession;
+import com.dgu.review.domain.interview.repository.InterviewQuestionRepository;
 import com.dgu.review.domain.interview.repository.InterviewSessionRepository;
 import com.dgu.review.global.exception.ApiException;
 import com.dgu.review.global.exception.ErrorCode;
@@ -17,26 +20,34 @@ import java.util.stream.Collectors;
 public class InterviewService {
 
     private final InterviewSessionRepository interviewSessionRepository;
+    private final InterviewQuestionRepository interviewQuestionRepository;
 
     public GetInterviewResultsResponse getInterviewResults(Long sessionId) {
         InterviewSession session = interviewSessionRepository.findById(sessionId)
                 .orElseThrow(() -> new ApiException(ErrorCode.INTERVIEW_SESSION_NOT_FOUND));
 
-        List<QuestionSummary> questionSummaries = session.getQuestions().stream()
-                .filter(q -> q.getParentQuestion() == null)
-                .map(q -> QuestionSummary.builder()
-                        .questionNumber(q.getQuestionNumber())
-                        .rootQuestion(q.getQuestion())
-                        .sttText(q.getRecording().getSttText())
-                        .aiFeedback(q.getAiFeedback())
-                        .selfFeedback(q.getSelfFeedback())
-                        .build()
-                ).collect(Collectors.toList());
+        if (interviewQuestionRepository.countRootsMissingFeedback(sessionId) != 0L) {
+            return new GetInterviewResultsResponse(ProgressStatus.WORKING, null);
+        }
+        List<QuestionSummary> questionSummaries =
+                interviewQuestionRepository.findOrderedRootSummaries(sessionId).stream()
+                        .map(v -> QuestionSummary.builder()
+                                .questionNumber(v.getQuestionNumber())
+                                .rootQuestion(v.getRootQuestion())
+                                .sttText(v.getSttText())
+                                .aiFeedback(v.getAiFeedback())
+                                .selfFeedback(v.getSelfFeedback())
+                                .build()
+                        ).toList();
 
-        return GetInterviewResultsResponse.builder()
+        InterviewSummary interviewSummary = InterviewSummary.builder()
                 .interviewTitle(session.getTitle())
                 .timeoutQuestionNumber(session.getTimeoutQuestionNumber())
                 .questionSummaries(questionSummaries)
                 .build();
+
+        return new GetInterviewResultsResponse(ProgressStatus.READY, interviewSummary);
+
+
     }
 }
